fix(comp:table): gap between expand trigger and text not working

--- a/packages/components/table/style/index.less
+++ b/packages/components/table/style/index.less
@@ -171,7 +171,7 @@
       cursor: unset;
     }
 
-    & + * {
+    &-gap {
       margin-left: @spacing-xs;
     }
   }
